# phalanx-ai

./: .gitignore  CHANGELOG.md  LICENSE  PROGRESS.md  README.md  ROADMAP.md  agents.py  cache.py  checkpoint.py  github.py  orchestrator.py  parser.py  phalanx_self_report.md  prompts.py  pyproject.toml  repo_summarizer.py  repo_summarizer_v2_prd.docx
tests/: test_agents_batching.py  test_agents_tool_use.py  test_checkpoint.py  test_orchestrator_checkpoint.py  test_orchestrator_deep_mode.py  test_orchestrator_progress.py  test_parser.py
